--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -7,114 +7,59 @@ tags: ['Patterns/Tree', 'DataStructures/Tree']
 
 ## Problem Description
 
-https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/
+Source: https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/
 
 Given a binary tree, return the zigzag level order traversal of its nodes' values. (ie, from left to right, then right to left for the next level and alternate between).
 
 For example:
-Given binary tree [3,9,20,null,null,15,7],
+Given binary tree [3, 9, 20, null, null, 15, 7],
+
+```
     3
    / \
   9  20
     /  \
    15   7
-return its zigzag level order traversal as:
-[
-  [3],
-  [20,9],
-  [15,7]
-]
+```
+
+return its zigzag level order traversal as: [[3], [20, 9], [15, 7]].
 
 ## Solution
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+### High level strategy
+Our strategy to solve this problem will be to conduct a breadth-first search. However, unlike an ordinary breadth-first search, we will only traverse from the left to right on even levels (including zero), and from the right to left on odd levels. The time and space complexity of this solution is **O(n)**.
 
-<Tabs
-  defaultValue="java"
-  values={[
-      { label: 'Java', value: 'java', },
-    { label: 'Python', value: 'py', },
-  ]
-}>
-<TabItem value="java">
+```
+    3   level 0; traverse from left to right [3]
+   / \
+  9  20   level 1; traverse from right to left [20, 9]
+    /  \
+   15   7   level 2; traverse from left to right [15, 7]
+```
 
-```java
-
-class Solution {
-    public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
-            List<List<Integer>> toRet = new ArrayList<>();
-            if (root == null) return toRet;
-            Queue<TreeNode> queue = new LinkedList<>();
-            queue.add(root);
-            int count;
-            boolean leftToRight = true;
-            while(!queue.isEmpty()){
-                count = queue.size();
-                ArrayList<Integer> level = new ArrayList<>();
-                for (int i = 0; i < count; i ++){
-                    TreeNode node = queue.poll();
-                    if(leftToRight) {
-                        level.add(node.val);
-                    } else {
-                        level.add(0, node.val);
-                    }
-                    if(node.left != null){
-                        queue.add(node.left);
-                    }
-                    if(node.right != null){
-                        queue.add(node.right);
-                    }
-                }
-                leftToRight = !leftToRight;
-                toRet.add(level);
-            }
-            return toRet;
+### Code
+```javascript
+const zigzagLevelOrder = (root) => {
+    let result = [];
+    
+    let recurse = (node, level) => {
+        if (node === null) return;
+        if (!result[level]) {
+            result[level] = [];
         }
-}
+        
+        if (level % 2 === 0) {
+            result[level].push(node.val); // left to right traversal is implemented with the push method
+        } else {
+            result[level].unshift(node.val); // right to left traversal is implemented with the unshift method
+        }
+        
+        recurse(node.left, level + 1);
+        recurse(node.right, level + 1);
+    };
+    
+    
+    recurse(root, 0);
+    return result;
+};
 ```
-
-</TabItem>
-<TabItem value="py">
-
-```py
-class Solution(object):
-    def zigzagLevelOrder(self, root):
-        """
-        :type root: TreeNode
-        :rtype: List[List[int]]
-        """
-        if not root: 
-            return []
-
-        leftToRight = True 
-
-        dq = collections.deque() 
-        dq.append(root)
-        traversal = [] 
-        while len(dq) > 0:
-            level = []
-            for i in range(len(dq)):
-                if leftToRight:
-                    cur = dq.popleft()
-                    level.append(cur.val)
-                    if cur.left:
-                        dq.append(cur.left)
-                    if cur.right:
-                        dq.append(cur.right)
-                else:
-                    cur = dq.pop()
-                    level.append(cur.val)
-
-                    if cur.right:
-                        dq.appendleft(cur.right)
-                    if cur.left:
-                        dq.appendleft(cur.left)
-
-            traversal.append(level)
-            leftToRight = not leftToRight
-        return traversal
-```
-
-</TabItem>
-</Tabs>
