added a binary tree question and fixed some solution code

--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -39,6 +39,15 @@ Our strategy to solve this problem will be to conduct a breadth-first search. Ho
 
 ### Code
 ```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ **/
+
 const zigzagLevelOrder = (root) => {
     let result = [];
     
