--- a/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
@@ -35,6 +35,15 @@ To implement our strategy, we will initialize the minimum value and the maximum 
 
 ### Code 
 ```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ **/
+
 const isValidBST = (root) => {
     return helper(root, null, null);
 };
