--- a/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
+++ b/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
@@ -29,7 +29,19 @@ return [1, 3, 4, 5].
 ## Solution
 
 ### High level strategy
-Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, replacing the previously traversed nodes with the right-most node. The time complexity of this solution is **O(n)**.
+Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, but only keeping the value of the right-most node. To implement this solution, we will make use of the index property of arrays. The index of every element in the resulting array is the level of the corresponding right-most node on the tree. To see this, one can simply flip the tree on its side. The time complexity of this solution is **O(n)**.
+```
+result: [1, 3, 4, 5];
+
+    1   <----- the right-most element is 1, which is equal to result[0];
+   / \
+  2   3     <----- the right-most element is 3, which is equal to result[1];
+   \   \
+    6   4     <----- the right-most element is 4, which is equal to result[2];
+   /
+  5     <----- the right-most element is 5, which is equal to result[3];
+```
+
 
 ### Code
 ```javascript
@@ -47,7 +59,7 @@ const rightSideView = (root) => {
 
     let recurse = (node, level) => {
         if (node === null) return;
-        result[level] = node.val;
+        result[level] = node.val; // as we traverse from the left to right, the element on that level in the result array will be replaced with the right most node in the tree. 
         recurse(node.left, level + 1);
         recurse(node.right, level + 1);
     };
