added a question to bst commmon problems / fixed minor typos

--- a/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
@@ -24,7 +24,21 @@ Given the sorted array: [-10, -3, 0, 5, 9], return the following tree:
 ## Solution
 
 ### High level strategy
-To ensure that both sides of the tree has an equal amount of nodes, and to maintain the binary search tree invariant, we must always choose the middle element of the input array as our root node. After setting the root node of the tree, we split the input array in two sub-arrays to repeat the aforementioned logic. The middle element of every sub-array will always be the root node of every subtree. The time and space complexity of this solution are both **O(n)**.
+To ensure that both sides of the tree has an equal amount of nodes, and to maintain the binary search tree invariant, we must always choose the middle element of the input array as our root node. After setting the root node of the tree, we split the input array in two sub-arrays to repeat the aforementioned logic. The left sub-array will start from the beginning of the array up to the index of the middle node. The right sub-arry will start from the index after the middle node, up to the end of the array. The middle element of every sub-array will always be the root node of every subtree. 
+
+For example:
+```
+Input: [1, 2, 3, 4, 5, 6, 7, 8, 9];
+Output:             [5] ---> root: [5], left: [1, 2, 3, 4], right: [6, 7, 8, 9];
+                  /     \
+               [3]       [7] ---> root: [3], left: [1, 2], right: [4]; 
+              /   \     /   \     root: [7], left: [6], right: [8, 9];
+            [1]   [4] [6]   [8] ---> root: [1], left: null, right[2];
+              \               \      root: [8], left: null, right[9];
+              [2]             [9]
+```
+
+The time and space complexity of this solution are both **O(n)**.
 
 ### Code
 ```javascript
@@ -51,5 +65,5 @@ const sortedArrayToBST = (nums) => {
     };
 
     return helper(0, nums.length - 1);
-}
+};
 ```
