add other languages and more solutions

--- a/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
+++ b/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
@@ -26,7 +26,7 @@ Given binary tree [1, 2, 3, null, 6, null, 4, null, null, 5],
 
 return [1, 3, 4, 5].
 
-## Solution
+## BFS Solution
 
 ### High level strategy
 Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, but only keeping the value of the right-most node. To implement this solution, we will make use of the index property of arrays. The index of every element in the resulting array is the level of the corresponding right-most node on the tree. To see this, one can simply flip the tree on its side. The time complexity of this solution is **O(n)**.
@@ -42,8 +42,20 @@ result: [1, 3, 4, 5];
   5     <----- the right-most element is 5, which is equal to result[3];
 ```
 
-
 ### Code
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs
+  defaultValue="js"
+  values={[
+    { label: 'Javascript', value: 'js', },
+    { label: 'Python', value: 'py', }
+  ]
+}>
+<TabItem value="js">
+
 ```javascript
 /**
  * Definition for a binary tree node.
@@ -68,3 +80,118 @@ const rightSideView = (root) => {
     return result;
 };
 ```
+</TabItem>
+<TabItem value="py">
+
+```python
+# Trick: Just store the lest element on each level
+def rightSideView(self, root: TreeNode) -> List[int]:
+    if not root: 
+        return [] 
+
+    trav, q = [], collections.deque([root])
+
+    while q:
+        cur = None 
+        for i in range(len(q)): 
+            cur = q.popleft() 
+            if cur.left: 
+                q.append(cur.left)
+            if cur.right: 
+                q.append(cur.right)            
+        trav.append(cur.val)
+
+    return trav
+```
+</TabItem>
+</Tabs>
+
+## DFS Solutions
+### High level strategy
+
+We can modify the code and covert it into a DFS solution, the same concept applies.
+
+### Code
+<Tabs
+  defaultValue="java"
+  values={[
+    { label: 'Java', value: 'java', },
+    { label: 'Python', value: 'py', },
+    { label: 'C++', value:'cp' }
+  ]
+}>
+<TabItem value="java">
+
+```java
+class Solution {
+    public List<Integer> rightSideView(TreeNode root) {
+        List<Integer> ans = new LinkedList<>();
+        dfs(root, 1, ans);
+        return ans;
+    }
+    
+    private void dfs(TreeNode node, int level, List<Integer> ans){
+        if(node == null){
+            return;
+        }
+        if(level > ans.size()){ // push current node to it
+            ans.add(node.val);
+        }
+        dfs(node.right, level+1, ans);
+        dfs(node.left, level+1, ans);
+    }
+}
+```
+</TabItem>
+<TabItem value="py">
+
+```python
+# Trick: Keep track of depth and update it via the traversal length. Make sure you stack left first then right to ensure properly visiting right first.
+def rightSideView(self, root: TreeNode) -> List[int]:
+    if not root: 
+        return [] 
+
+    s, maxdepth = [(root, 1)], -1
+    trav = [] 
+
+    while s: 
+        cur, depth = s.pop() 
+
+        if cur: 
+            maxdepth = max(maxdepth, depth)
+
+        if len(trav) < depth: 
+            trav.append(cur.val)
+
+        if cur.left:
+            s.append((cur.left, depth+1))
+        if cur.right:
+            s.append((cur.right, depth+1))
+    return trav
+```
+</TabItem>
+<TabItem value='cp'>
+
+```cpp
+//C++
+class Solution {
+public:
+    vector<int> rightSideView(TreeNode* root) {
+        ans = {};
+        dfs(root, 1);
+        return ans;
+    }
+    void dfs(TreeNode* root, int h) {
+        if (root == nullptr) return;
+        if (ans.size() < h) {
+            ans.push_back(root->val);
+        }
+        dfs(root->right, h + 1);
+        dfs(root->left, h + 1);
+    }
+private:
+    vector<int> ans;
+};
+```
+</TabItem>
+</Tabs>
