--- a/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/98. Validate Binary Search Tree.md
@@ -34,6 +34,45 @@ To check whether a tree is a valid binary search tree, we must compare the value
 To implement our strategy, we will initialize the minimum value and the maximum value with null. We will keep the initial minimum value and pass the value of the current node as the maxmimum value as we recurse down the left side of the current node. We will keep the initial maximum value and pass the value of the current node as the minimum value as we recurse down the right side of the current node. We will return false if the minimum value is greater or equal to the value of the current node, and return false if the maximum value is lesser or equal to the value of the current node. We will only return true if we have reached the leaf of a tree, by which point the binary search tree invariant has yet to be violated. As we recurse back to the bottom-most level of the call stack, we expect both sides of the tree to return true, and we will only return true if and only if both sides return true. The time complexity of this solution is **O(n)**.
 
 ### Code 
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs
+  defaultValue="java"
+  values={[
+    { label: 'Java', value: 'java' },
+    { label: 'Javascript', value: 'js' },
+    { label: 'Python', value: 'py' }
+  ]
+}>
+<TabItem value="java">
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+public class Solution {
+    public boolean isValidBST(TreeNode root) {
+        return isValidBST(root, Long.MIN_VALUE, Long.MAX_VALUE);
+    }
+    
+    public boolean isValidBST(TreeNode root, long minVal, long maxVal) {
+        if (root == null) return true;
+        if (root.val >= maxVal || root.val <= minVal) return false;
+        return isValidBST(root.left, minVal, root.val) && isValidBST(root.right, root.val, maxVal);
+    }
+}
+```
+</TabItem>
+<TabItem value="js">
+
 ```javascript
 /**
  * Definition for a binary tree node.
@@ -56,3 +95,21 @@ const helper = (node, min, max) => {
     return helper(node.left, min, node.val) && helper(node.right, node.val, max);
 };
 ```
+</TabItem>
+<TabItem value="py">
+
+```python
+def isValidBST(self, root: TreeNode) -> bool:        
+    def validate(node, min_, max_):
+        if not node:
+            return True 
+
+        if not (min_ < node.val < max_):
+            return False 
+
+        return validate(node.left, min_, node.val) and validate(node.right, node.val, max_)
+
+    return validate(root,float('-inf'), float('inf'))
+```
+</TabItem>
+</Tabs>
