--- a/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
+++ b/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
@@ -41,6 +41,18 @@ To check whether two nodes are identical, we can check the following conditions:
 To check whether a tree is symmetrical, we can simply apply the logics above to the opposite nodes on each side of the tree. That is, we compare the right child of the left child with the left child of the right child, so on and so forth. We recurse down both sides of the root node, and return true if and only if both sides return true. The time complexity of this solution is **O(n)**.
 
 ### Code 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs
+  defaultValue="js"
+  values={[
+    { label: 'Javascript', value: 'js', },
+    { label: 'Java', value: 'java', }
+  ]
+}>
+<TabItem value="js">
+
 ```javascript
 /**
  * Definition for a binary tree node.
@@ -64,3 +76,64 @@ const isSame = (node1, node2) => {
     return isSame(node1.left, node2.right) && isSame(node1.right, node2.left);
 };
 ```
+</TabItem>
+<TabItem value="java">
+
+```java
+public boolean isSymmetric(TreeNode root) {
+    return root==null || isSymmetricHelp(root.left, root.right);
+}
+
+private boolean isSymmetricHelp(TreeNode left, TreeNode right){
+    if(left==null || right==null)
+        return left==right;
+    if(left.val!=right.val)
+        return false;
+    return isSymmetricHelp(left.left, right.right) && isSymmetricHelp(left.right, right.left);
+}
+```
+</TabItem>
+</Tabs>
+
+## Other Solutions
+<details>
+<summary>BFS Approach</summary>
+
+
+```java
+/**
+ * We can also explore each level through BFS,
+ * then iterate through all nodes in each level to see if they are a mirror
+ * (same idea as checking if a string is a palindrome). 
+ */
+
+class Solution {
+    public boolean isSymmetric(TreeNode root) {
+        if (root == null) return true;
+        Queue<TreeNode> queue = new LinkedList<>(); 
+        queue.add(root);
+        while(queue.size() > 0) {
+            int size = queue.size();
+            List<Integer> level = new ArrayList<>();
+            while(size > 0) {
+                TreeNode cur = queue.poll();
+                if (cur == null) {
+                    level.add(null);
+                } else {
+                    level.add(cur.val);
+                    queue.add(cur.left);
+                    queue.add(cur.right);
+                }
+                size--;
+            }
+            List<Integer> reverse = new ArrayList<>();
+            for(int i = level.size() - 1; i >= 0; i--) {
+                reverse.add(level.get(i));
+            }
+            if (!level.equals(reverse)) return false;
+        }
+        return true;
+    }
+}
+```
+</details>
