--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -39,6 +39,15 @@ Our strategy to solve this problem will be to conduct a breadth-first search. Ho
 
 ### Code
 ```javascript
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ **/
+
 const zigzagLevelOrder = (root) => {
     let result = [];
     
@@ -64,9 +73,8 @@ const zigzagLevelOrder = (root) => {
 };
 ```
 
-
-
 ## Other Solutions
+- We can potentially use a deque, insert it at head for odd levels, and tail for even levels
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
