added space complexities

--- a/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
+++ b/docs/QuestionBank/Leetcode/103. Binary Tree Zigzag Level Order Traversal.md
@@ -27,7 +27,7 @@ return its zigzag level order traversal as: [[3], [20, 9], [15, 7]].
 ## Solution
 
 ### High level strategy
-Our strategy to solve this problem will be to conduct a breadth-first search. However, unlike an ordinary breadth-first search, we will only traverse from the left to right on even levels (including zero), and from the right to left on odd levels. The time and space complexity of this solution is **O(n)**.
+Our strategy to solve this problem will be to conduct a breadth-first search. However, unlike an ordinary breadth-first search, we will only traverse from the left to right on even levels (including zero), and from the right to left on odd levels. The time complexity of this solution is **O(n)** and the space complexity is **O(nlogn)**.
 
 ```
     3   level 0; traverse from left to right [3]
