fixed the space complexities

--- a/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
+++ b/docs/QuestionBank/Leetcode/101. Symmetric Tree.md
@@ -38,7 +38,7 @@ To check whether two nodes are identical, we can check the following conditions:
 2. If one of the nodes is null, then they **are not the same**.
 3. If the value of one node is not equal to the value of the other, then they **are not the same**.
 
-To check whether a tree is symmetrical, we can simply apply the logics above to the opposite nodes on each side of the tree. That is, we compare the right child of the left child with the left child of the right child, so on and so forth. We recurse down both sides of the root node, and return true if and only if both sides return true. The time complexity of this solution is **O(n)**, and the space complexity is **O(logn)**.
+To check whether a tree is symmetrical, we can simply apply the logics above to the opposite nodes on each side of the tree. That is, we compare the right child of the left child with the left child of the right child, so on and so forth. We recurse down both sides of the root node, and return true if and only if both sides return true. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity of this solution is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
 
 ### Code 
 import Tabs from '@theme/Tabs';
