--- a/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/docs/QuestionBank/Leetcode/236. Lowest Common Ancestor of a Binary Tree.md
@@ -29,7 +29,7 @@ return 3.
 ## Solution
 
 ### High level strategy
-Our approach to this problem is to solve it recursively. In our base case, we return the current node if it is equal to 'p', 'q', or null. This way, we will receive falsy values as we recurse down a branch that does not contain either 'p' or 'q'. Therefore, if either the left or right side of the current node returns null, then we know that that side of the tree does not contain the target values, and we can simply check the opposite side. We repeat this process until we arrive at a subtree that contains both target values, at which point we return the root node of the subtree. The time complexity of this solution is **O(n)**, since we must check the entire tree, and the space complexity is **O(logn)**. 
+Our approach to this problem is to solve it recursively. In our base case, we return the current node if it is equal to 'p', 'q', or null. This way, we will receive falsy values as we recurse down a branch that does not contain either 'p' or 'q'. Therefore, if either the left or right side of the current node returns null, then we know that that side of the tree does not contain the target values, and we can simply check the opposite side. We repeat this process until we arrive at a subtree that contains both target values, at which point we return the root node of the subtree. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree. 
 
 ### Code
 import Tabs from '@theme/Tabs';
