--- a/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
+++ b/docs/QuestionBank/Leetcode/108. Convert Sorted Array to Binary Search Tree.md
@@ -38,7 +38,7 @@ Output:             [5] ---> root: [5], left: [1, 2, 3, 4], right: [6, 7, 8, 9];
               [2]             [9]
 ```
 
-The time and space complexity of this solution are both **O(n)**.
+The time and space complexity of this solution are both **O(n)**, where 'n' is equal to the number of nodes.
 
 ### Code
 import Tabs from '@theme/Tabs';
