--- a/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
+++ b/docs/QuestionBank/Leetcode/199. Binary Tree Right Side View.md
@@ -29,7 +29,7 @@ return [1, 3, 4, 5].
 ## BFS Solution
 
 ### High level strategy
-Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, but only keeping the value of the right-most node. To implement this solution, we will make use of the index property of arrays. The index of every element in the resulting array is the level of the corresponding right-most node on the tree. To see this, one can simply flip the tree on its side. The time complexity of this solution is **O(n)**.
+Our strategy to solve this problem is to conduct a breadth-first search. On each level, we traverse from the left to right, but only keeping the value of the right-most node. To implement this solution, we will make use of the index property of arrays. The index of every element in the resulting array is the level of the corresponding right-most node on the tree. To see this, one can simply flip the tree on its side. The time complexity of this solution is **O(n)**, where 'n' is equal to the number of nodes. The space complexity of this solution is **O(logn)**, or **O(h)**, where 'h' is equal to the height of the tree.
 ```
 result: [1, 3, 4, 5];
 
